<resources>
    <string name="app_name">小麻包母婴</string>
    <string name="no_network">网络状况不太好哦</string>
    <string name="generic_error">网络请求失败</string>
    <string name="generic_server_down">服务器出现问题, 请稍候重试</string>
    <string name="text_login">登陆</string>
    <string name="text_weixin_login">微信登陆</string>
    <string name="tip_login_uname">请输入手机/邮箱/用户名</string>
    <string name="text_login_uname">登陆名</string>
    <string name="tip_login_pwd">请输入密码</string>
    <string name="text_login_pwd">密码</string>
    <string name="text_fast_register">快速注册</string>
    <string name="text_retrieve_pwd">找回密码</string>
    <string name="text_register_area">国家地区</string>
    <string name="text_phone">手机号</string>
    <string name="phone_num">手机</string>
    <string name="text_next_step">下一步</string>
    <string name="tip_input_phone">请输入手机号</string>
    <string name="text_uname">用户名</string>
    <string name="tip_uname">请输入用户名</string>
    <string name="text_email">邮箱</string>
    <string name="tip_email">请输入邮箱账号</string>
    <string name="text_set_pwd">设置密码</string>
    <string name="text_confirm_pwd">确认密码</string>
    <string name="tip_pwd_style">密码由6–20位字母、数字或符号组成</string>
    <string name="tip_write_phone_check_code">请输入手机号%1$s收到的短信校验码</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="text_check_code">校验码</string>
    <string name="tip_check_code">请输入校验码</string>
    <string name="tip_confirm_pwd">确认登陆密码</string>
    <string name="text_bind_email">继续绑定邮箱</string>
    <string name="text_finish">完成</string>
    <string name="text_phone_register_success">当前手机号注册成功</string>
    <string name="tip_register_set_email">身份验证已通过, 请设置邮箱为账户</string>
    <string name="text_agree">同意</string>
    <string name="text_app_register_license">《小麻包注册协议》</string>
    <string name="tip_uname_style">4–20个字符</string>
    <string name="text_access_email">通过邮箱验证码</string>
    <string name="text_verify_code">验证码</string>
    <string name="text_access_phone">通过手机校验码</string>
    <string name="tip_verify_code">请输验证码</string>
    <string name="text_qq_login">QQ登录</string>
    <string name="text_weibo_login">微博登录</string>
    <string name="text_wait_for_payment">待付款</string>
    <string name="text_wait_for_send">待发货</string>
    <string name="text_finished">已完成</string>
    <string name="text_shipped">待收货</string>
    <string name="text_all_order">全部订单</string>
    <string name="text_wait_for_evaluate">待评价</string>
    <string name="text_wait_for_out_price">退换货</string>
    <string name="text_service">麻包服务</string>
    <string name="text_wait_for_out_price1">填写发货信息</string>
    <string name="text_wait_for_out_price2">进度查询</string>
    <string name="text_group_buying">团购</string>
    <string name="text_logistics">物流查询</string>
    <string name="text_vaccine">疫苗记录</string>
    <string name="text_vaccine_">关于宝宝</string>
    <string name="text_weather_info">天气提醒</string>
    <string name="text_anxin_info">安心提示</string>
    <string name="text_grow_info">成长贴士</string>
    <string name="text_vaccine_cj">产检</string>
    <string name="text_vaccine_cj_">""</string>
    <string name="text_uprecord">发表记录</string>
    <string name="text_add_baby">添加宝宝</string>
    <string name="text_edit_baby">修改宝宝信息</string>
    <string name="text_my_favorite">我的收藏</string>
    <string name="text_my_elec_order">电子卡订单</string>
    <string name="text_cash_coupon">代金券</string>
    <string name="text_browsing_history">浏览记录</string>
    <string name="text_vaccine_record">疫苗记录</string>
    <string name="text_bedtime_story">睡前故事</string>
    <string name="text_comment_">发评论</string>
    <string name="text_mama_comment">麻麻评论</string>
    <string name="text_comments_">回复</string>
    <string name="text_message_">消息</string>
    <string name="text_big_aunt">大姨妈</string>
    <string name="text_antenatal_care">产检</string>
    <string name="text_baby_weight_height">宝宝身高体重</string>
    <string name="text_new_born">知识库</string>
    <string name="text_place_of_receipt">收货地址</string>
    <string name="text_real_name_certification">实名认证</string>
    <string name="text_mb_help">麻包帮助</string>
    <string name="text_uprecord_sb">  请输入你和宝宝的趣事吧！</string>
    <string name="text_online_service">联系我们</string>
    <string name="text_product_order">我的服务</string>
    <string name="text_after_sales_service">售后服务</string>
    <string name="text_recommend_shop">推荐店铺</string>
    <string name="text_evaluate">评价我们</string>
    <string name="text_user_feedback">用户反馈</string>
    <string name="text_all">全部</string>
    <string name="text_hot_line">热线电话</string>
    <string name="text_tel_service">010-8517-0751</string>
    <string name="text_change_info">修改个人资料</string>
    <string name="text_change_pwd">修改密码</string>
    <string name="text_bind_phone">手机绑定</string>
    <string name="text_mb_evaluate">小麻包评价</string>
    <string name="text_service_item">服务条款</string>
    <string name="text_mb_about">关于麻包</string>
    <string name="text_volume_toggle">音效开关</string>
    <string name="text_logout">退出登陆</string>
    <string name="text_check_update">检查更新</string>
    <string name="text_clear_cache">清除缓存</string>
    <string name="text_version_code">版本号</string>
    <string name="text_setting">设置</string>
    <string name="tip_setting">请设置</string>
    <string name="text_submit">提交</string>
    <string name="tip_evaluation">请给好评哦, 亲！！！</string>
    <string name="text_original_pwd">旧 密 码:</string>
    <string name="text_new_pwd">新 密 码:</string>
    <string name="text_re_new_pwd">新密码确认:</string>
    <string name="text_application_type">申请类型</string>
    <string name="text_application_num">申请数量</string>
    <string name="text_input_current_pwd">请输入当前密码</string>
    <string name="text_save">保存</string>
    <string name="tip_feedbcak">亲，您遇到什么问题啦？或者有什么建议？欢迎您提给我们</string>
    <string name="text_real_name">真实姓名：</string>
    <string name="text_identity_card">身份证号码：</string>
    <string name="tip_certification">1、由于免税店、直邮商品需要办理入境申报，请配合进行实名认证\n2
        、小订包承诺所传身份证明只用于直邮商品的清关手续，不作其他用途使用，其他任何人均无法查看</string>
    <string name="tip_real_name">请输入真实姓名</string>
    <string name="name">姓名&#160;:</string>
    <string name="identity_number">身份证号&#160;:</string>
    <string name="name_hint">请输入您的姓名</string>
    <string name="identity_number_hint">请输入您的身份证号</string>
    <string name="tip_mail_register">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;您已通过邮箱注册，还差一步完成注册，完成手机注册，让您购物更安全</string>
    <string name="tip_certification_card">请输入身份证号码</string>
    <string name="text_empty">清空</string>
    <string name="text_sub">发表</string>
    <string name="text_add_to_shopping_cart">加入购物车</string>
    <string name="text_add_to_shopping_search">商品搜索</string>
    <string name="text_shake_times">今天您还可以摇 %1$d 次</string>
    <string name="tip_input_nickname">请输入昵称</string>
    <string name="text_register">注册</string>
    <string name="text_newest_sale">最新特卖</string>
    <string name="text_coming_out">即将推出</string>
    <string name="text_settle_account">结算 (%d)</string>
    <string name="text_delete">删除</string>
    <string name="text_add_to_favorite">加入收藏</string>
    <string name="text_money_tmpl">￥%d</string>
    <string name="text_payment">付款</string>
    <string name="text_attention">关注</string>
    <string name="text_fans">粉丝</string>
    <string name="text_check_all">全选</string>
    <string name="text_receiver_address">收货地址</string>
    <string name="text_invite_friend">邀请好友</string>
    <string name="text_invite_friend_grey">立赚5元</string>
    <string name="text_jing_group">今日团购</string>
    <string name="text_receiver_out_service">售后服务</string>
    <string name="text_new_baby">知识库</string>
    <string name="text_edit">编辑</string>
    <string name="text_new_receiver_address">新增收货地址</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm">确定</string>
    <string name="cancel_share_text">您取消了分享！</string>
    <string name="text_total">总计：</string>
    <string name="text_canceled">已取消</string>
    <string name="text_special_offer">特卖</string>
    <string name="text_special_mb">萌宝</string>
    <string name="text_tax_exemption">购物</string>
    <string name="text_mb_service">麻包服务</string>
    <string name="text_mb_circle">麻包圈</string>
    <string name="text_shopping_cart">购物车</string>
    <string name="text_me">个人中心</string>
    <string name="text_circle">麻包圈</string>
    <string name="baby_name">宝宝小名 ：</string>
    <string name="baby_birthday">宝宝生日 ：</string>
    <string name="baby_gender">宝宝性别 ：</string>
    <string name="add_baby_top">添加宝宝</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">没有更多.</string>
    <string name="mabao_gongxiang_card">麻包卡&#038;共享卡</string>
    <string name="welfare_card">福利卡</string>
    <string name="card_use_help">帮助中心</string>
    <string name="entity_card">实体卡</string>
    <string name="electronic_card">电子卡</string>
    <string name="add_card">添加</string>
    <string name="custom_hint">请输入自定义面额(1-5000整数)</string>
    <string name="card_pay_area">电子卡结算区</string>
    <string name="go_pay">去结算</string>
    <string name="pay_amount">应付总额：</string>
    <string name="tip_content">尊敬的用户，你正在购买电子卡，付款后请在\&#034;订单详情页\&#034;查看卡号和密码进行使用，电子卡购买后不退不换</string>
    <string name="card_num_passw">卡号&#038;卡密</string>
    <string name="card_order_detail">订单详情</string>
    <string name="elec_order">电子卡订单</string>
    <string name="copy_account_pss">复制信息</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_rule">邀请好友规则</string>
    <string name="text_message_shouldknonw">须知</string>
    <string name="type_of_invoice">发票类型 :</string>
    <string name="paper_invoice">纸质发票</string>
    <string name="head_of_invoice">发票抬头 :</string>
    <string name="personal_invoice">个人</string>
    <string name="company_invoice">单位</string>
    <string name="hint_of_invoice">请输入单位公司名称</string>
    <string name="content_of_invoice">发票内容 :</string>
    <string name="close_invoice">服装</string>
    <string name="cosmetic_invoice">化妆品</string>
    <string name="electronics_invoice">电子产品</string>
    <string name="stationery_invoice">文具用品</string>
    <string name="goods_detail_invoice">商品明细</string>
    <string name="invoice_confirm">确&#160;&#160;&#160;&#160;定</string>
    <string name="btn_check">确&#160;&#160;定</string>
    <string name="info_title">发票须知</string>
    <string name="info_content_one">1.目前只支持纸质发票，暂不支持电子发票、增值税发票</string>
    <string name="info_content_two">2.发票金额为订单实际支付金额，不包含红包、优惠券抵扣金额、麻豆抵扣金额、麻包卡＆共享卡抵扣金额</string>
    <string name="info_content_three">3.跨境购商品暂不支持开具发票</string>
    <string name="refund_info">请在7天内将商品寄回，逾期未退货申请将自动关闭。\n退货地址：请联系客服进行
        确认\n联系人：小麻包商城，电话：010-85170751\n建议使用圆通，中通，申通，韵达，不接受顺丰EMS和任何到付件</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="tip_load_data_error">对不起,无法加载数据</string>
    <string name="text_security_check">安全校验</string>
    <string name="text_write_check_code">填写校验码</string>
    <string name="text_register_success">注册成功</string>
    <string name="text_personal_data">个人信息</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_my_account">我的账户</string>
    <string name="text_life_health">生活健康</string>
    <string name="text_mabudai">麻布袋</string>
    <string name="text_shopcart">购物车</string>
    <string name="text_title">麻花</string>
    <string name="progress_login">正在登录</string>
    <string name="text_price">价格</string>
    <string name="text_sales">销量</string>
    <string name="pay_now">立即购买</string>
    <string name="text_discount">折扣</string>
    <string name="text_loading">正在加载</string>
    <string name="tip_empty_cart">您的购物车还是空的哦！</string>
</resources>