<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/login_top_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="30dp">

            <com.witmoon.xmb.ui.widget.InputAreaLinearLayout
                style="@style/inputAreaWrapper"
                android:layout_marginTop="@dimen/item_vertical_space">

                <TextView
                    style="@style/inputAreaTextView"
                    android:drawableLeft="@mipmap/icon_user"
                    android:text="@string/text_login_uname" />

                <EditText
                    android:id="@+id/login_uname_edit"
                    style="@style/inputAreaEditText"
                    android:hint="@string/tip_login_uname" />

            </com.witmoon.xmb.ui.widget.InputAreaLinearLayout>

            <com.witmoon.xmb.ui.widget.InputAreaLinearLayout
                style="@style/inputAreaWrapper"
                android:layout_marginTop="@dimen/item_vertical_space">

                <TextView
                    style="@style/inputAreaTextView"
                    android:drawableLeft="@mipmap/icon_lock"
                    android:text="@string/text_login_pwd" />

                <EditText
                    android:id="@+id/login_pwd_edit"
                    style="@style/inputAreaEditText"
                    android:hint="@string/tip_login_pwd"
                    android:inputType="textPassword" />

                <ToggleButton
                    android:id="@+id/login_pwd_switch"
                    style="@style/passwordToggleBtn" />
            </com.witmoon.xmb.ui.widget.InputAreaLinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@+id/login_fast_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fast_register" />

                <TextView
                    android:id="@+id/login_retrieve_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/text_retrieve_pwd" />
            </RelativeLayout>

            <Button
                android:id="@+id/submit_button"
                style="@style/commonButton"
                android:layout_marginTop="48dp"
                android:text="@string/text_login" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/login_by_weichat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item_pressed"
                    android:drawableTop="@mipmap/icon_64x64_weixin"
                    android:gravity="center"
                    android:text="@string/text_weixin_login" />

                <TextView
                    android:id="@+id/login_by_qq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item_pressed"
                    android:drawableTop="@mipmap/icon_64x64_qq"
                    android:gravity="center"
                    android:text="@string/text_qq_login" />

                <TextView
                    android:id="@+id/login_by_weibo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item_pressed"
                    android:drawableTop="@mipmap/icon_64x64_weibo"
                    android:gravity="center"
                    android:text="@string/text_weibo_login" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
