<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            style="@style/inputAreaWrapper"
            android:layout_marginTop="18dp">

            <TextView
                style="@style/inputAreaTextView"
                android:drawableLeft="@mipmap/icon_lock"
                android:text="@string/text_set_pwd"/>

            <EditText
                android:id="@+id/register_pwd_text"
                style="@style/inputAreaEditText"
                android:hint="@string/tip_login_pwd"
                android:inputType="textPassword"/>

            <ToggleButton
                android:id="@+id/login_pwd_switch"
                style="@style/passwordToggleBtn"/>
        </LinearLayout>

        <LinearLayout
            style="@style/inputAreaWrapper"
            android:layout_marginTop="18dp">

            <TextView
                style="@style/inputAreaTextView"
                android:drawableLeft="@mipmap/icon_locked"
                android:text="@string/text_confirm_pwd"/>

            <EditText
                android:id="@+id/register_confirm_pwd_text"
                style="@style/inputAreaEditText"
                android:hint="@string/tip_confirm_pwd"
                android:inputType="textPassword"/>

            <ToggleButton
                android:id="@+id/login_repwd_switch"
                style="@style/passwordToggleBtn"/>
        </LinearLayout>

        <TextView
            android:id="@+id/register_write_code_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/tip_pwd_style"
            android:textColor="@color/text_view_hint"/>

        <Button
            android:id="@+id/next_step_btn"
            style="@style/commonButton"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="48dp"/>
    </LinearLayout>
</LinearLayout>