<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_x1"
            android:dividerPadding="6dp"
            android:orientation="vertical"
            android:paddingBottom="24dp"
            android:showDividers="middle">

            <TextView
                android:textColor="@color/app_main_deep"
                android:id="@+id/personal_info"
                style="@style/textViewSettingItemWithRArrowNoIcon"
                android:text="@string/text_change_info"/>

            <TextView
                android:textColor="@color/app_main_deep"
                android:visibility="gone"
                android:id="@+id/change_password"
                style="@style/textViewSettingItemWithRArrowNoIcon"
                android:text="@string/text_change_pwd"/>

            <TextView
                android:textColor="@color/app_main_deep"
                android:id="@+id/service_provision"
                style="@style/textViewSettingItemWithRArrowNoIcon"
                android:text="@string/text_service_item"/>

            <TextView
                android:textColor="@color/app_main_deep"
                android:id="@+id/about"
                style="@style/textViewSettingItemWithRArrowNoIcon"
                android:text="@string/text_mb_about"/>

            <LinearLayout
                android:id="@+id/clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_pressed"
                android:gravity="center_vertical">

                <TextView
                    android:textColor="@color/app_main_deep"
                    style="@style/textViewSettingItemNoIcon"
                    android:layout_width="wrap_content"
                    android:text="@string/text_clear_cache"/>

                <TextView
                    android:textColor="@color/app_main_thin"
                    android:id="@+id/cache_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/space_12"
                    android:drawableRight="@mipmap/icon_arrow_right"
                    android:gravity="right"
                    android:paddingRight="12dp"
                    android:text="0KB"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_pressed"
                android:gravity="center_vertical">

                <TextView
                    android:textColor="@color/app_main_deep"
                    style="@style/textViewSettingItemNoIcon"
                    android:layout_width="wrap_content"
                    android:text="@string/text_check_update"/>

                <TextView
                    android:textColor="@color/app_main_thin"
                    android:id="@+id/version_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/space_12"
                    android:drawableRight="@mipmap/icon_arrow_right"
                    android:gravity="right"
                    android:paddingRight="12dp"
                    android:text="当前版本：v1.0"/>
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                style="@style/commonButton"
                android:layout_margin="24dp"
                android:text="@string/text_logout"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>