<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#72000000">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dimen_100_dip"
        android:layout_marginRight="@dimen/dimen_100_dip">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/invoice_message_radius_rl"
            android:paddingBottom="@dimen/dimen_30_dip">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_35_dip"
                android:text="@string/info_title"
                android:textColor="#555555"
                android:textSize="@dimen/dimen_30_dip"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="@dimen/dimen_20_dip"
                android:layout_marginTop="@dimen/dimen_25_dip"
                android:padding="@dimen/dimen_5_dip"
                android:text="@string/info_content_one"
                android:textColor="#666666"
                android:textSize="@dimen/dimen_26_dip"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginLeft="@dimen/dimen_20_dip"
                android:layout_marginTop="@dimen/dimen_5_dip"
                android:padding="@dimen/dimen_5_dip"
                android:text="@string/info_content_two"
                android:textColor="#666666"
                android:textSize="@dimen/dimen_26_dip"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginLeft="@dimen/dimen_20_dip"
                android:layout_marginTop="@dimen/dimen_5_dip"
                android:padding="@dimen/dimen_5_dip"
                android:text="@string/info_content_three"
                android:textColor="#666666"
                android:textSize="@dimen/dimen_26_dip"/>
        </RelativeLayout>

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_80_dip"
            android:layout_below="@id/relativeLayout"
            android:background="@drawable/btn_bottom_radius"
            android:text="@string/btn_check"
            android:textColor="#ffffff"
            android:textSize="@dimen/dimen_30_dip"/>

    </RelativeLayout>

</RelativeLayout>